--- a/_docker-compose/docker-compose.yml
+++ b/_docker-compose/docker-compose.yml
@@ -14,4 +14,4 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - NEXT_PUBLIC_API_URL=http://backend:5000
+      - API_URL=http://backend:5000
