--- a/frontend/codes/package.json
+++ b/frontend/codes/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "test:e2e": "cypress run --headless",
+    "test:e2e:watch": "cypress open"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.14",
@@ -30,13 +34,18 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@cypress/react18": "^2.0.1",
+    "@cypress/webpack-dev-server": "^4.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cypress": "^14.4.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.25",
+    "html-webpack-plugin": "^5.6.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack-dev-server": "^5.2.2"
   }
 }
